--- a/src/components/titleDisplay.module.scss
+++ b/src/components/titleDisplay.module.scss
@@ -1,30 +1,41 @@
 @import "../styles/variables";
 
 .titleDisplay {
-    background: $bg_light;
-    color: $text;
-    font-size: 1.4em;
-    text-decoration: none;
+    width: 100%;
+    display: flex;
+    align-items: stretch;
+
+    .titleLink {
+        flex-grow: 1;
+        background: $bg_light;
+        color: $text;
+        font-size: 1.4em;
+        text-decoration: none;
+        
+        display: grid;
+        grid-template-columns: 40px 1fr 100px;
+        gap: 6px;
+        align-items: center;
+        
+        label {
+            cursor: pointer;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     
-    display: grid;
-    grid-template-columns: 40px 1fr 100px;
-    gap: 6px;
-    align-items: center;
+        .annotation {
+            text-align: center;
+            font-size: 1.5em;
+            font-weight: bold;
     
-    label {
-        cursor: pointer;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+            &.positive { color: #8f8 }
+            &.negative { color: #f88 }
+            &.neutral { color: #88f }
+        }
     }
 
-    .annotation {
-        text-align: center;
-        font-size: 1.5em;
-        font-weight: bold;
-
-        &.positive { color: #8f8 }
-        &.negative { color: #f88 }
-        &.neutral { color: #88f }
+    button {
+        border-radius: 0;
     }
 }
